<?xml version="1.0"?>
<package format="2">
  <name>dvs_global_flow</name>
  <version>0.0.0</version>
  <description>Global optical flow estimation using an event camera</description>
  <maintainer email="guillermo.gallego@tu-berlin.de">Guillermo Gallego</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>dvs_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>

  <export>
  </export>

</package>
